# pine-lang

./: .clang-format  .gitattributes  .gitignore  Cargo.toml  README.md
crates/base/: Cargo.toml
crates/base/src/: compile_context.rs  file_cache.rs  lib.rs  located.rs  source_id.rs  spanned.rs  text_span.rs
crates/c_gen/: Cargo.toml
crates/c_gen/src/: lib.rs
crates/c_gen/src/c_ast/: ast.rs  mod.rs  op.rs  ty.rs  write.rs
crates/c_gen/src/compiler_runner/: clang.rs  gcc.rs  mod.rs
crates/c_gen/src/lib_core/: mod.rs
crates/c_gen/src/lib_core/core_c/: log.c  log.h  pine_gc.c  pine_gc.h  pine_io.c  pine_io.h
crates/c_gen/src/passes/: ast_to_c.rs  extract_header.rs  mod.rs
crates/driver/: Cargo.toml
crates/driver/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: lexer.rs  lib.rs  message.rs  message_stream.rs  parser.rs
crates/pinec/: Cargo.toml
crates/pinec/src/: main.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: grammar.lalrpop  lexer.rs  lib.rs  parser.rs  token.rs
crates/syntax/src/ast/: expr.rs  mod.rs  op.rs  stmt.rs  toplevel.rs  ty.rs  types.rs
crates/syntax/src/snapshots/: syntax__parser__test__parse_identifier.snap  syntax__parser__test__parse_identifier_fail.snap  syntax__parser__test__parse_type.snap  syntax__parser__test__parse_type_fail.snap  syntax__parser__test__parse_typed_param_fail.snap  syntax__parser__test__parse_typed_param_multi.snap  syntax__parser__test__parse_typed_param_single.snap  syntax__parser__test__parse_typed_params.snap
crates/syntax/src/test_inputs/parser/: identifier_fail.pine  param_fail.pine  param_multi.pine  param_single.txt  type_fail.txt  typed_params.txt
crates/syntax/src/test_outputs/parser/: syntax__parser__test__parse_identifier.snap  syntax__parser__test__parse_identifier_fail.snap  syntax__parser__test__parse_type.snap  syntax__parser__test__parse_type_fail.snap  syntax__parser__test__parse_typed_param_fail.snap  syntax__parser__test__parse_typed_param_multi.snap  syntax__parser__test__parse_typed_param_single.snap
examples/: fibonacci.pi  leaky_mc_leak.pi  prime_check.pi  struct.pi  testing.pi
examples/lang/: all.pine
