[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
messages = { path = "../messages" }
internment = { workspace = true }
serde = { workspace = true }
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "json"] }
lazy_static = "1.4.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
