[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
messages = { path = "../messages" }
internment = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true, features = ["display"] }


[dev-dependencies]
insta = { workspace = true, features = ["redactions", "json"] }
lazy_static = { workspace = true }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
