[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
messages = { path = "../messages" }
internment = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true, features = ["display"] }


[dev-dependencies]
insta = { workspace = true, features = ["redactions", "ron"] }
lazy_static = { workspace = true }
